// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<UserContainer /> > should render user container 1`] = `
<section
  class="min-h-[calc(100dvh-149.5px)] md:min-h-[calc(100vh-88px)] bg-section flex justify-center items-center p-4"
>
  
  
</section>
`;

exports[`<UserContainer /> > should render with slots 1`] = `
<section
  class="min-h-[calc(100dvh-149.5px)] md:min-h-[calc(100vh-88px)] bg-section flex justify-center items-center p-4"
>
  
  <h2>
    Test
  </h2>
  
</section>
`;
